Initialize apple sign in

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -7,3 +7,8 @@ AWS_ACCESS_KEY_ID:
 AWS_SECRET_ACCESS_KEY:
 S3_BUCKET_NAME:
 AWS_BUCKET_REGION:
+APPLE_CIENT_ID:
+APPLE_PRIVATE_KEY:
+APPLE_KEY_ID:
+APPLE_TEAM_ID:
+APPLE_REDIRECT_URL:
